[gd_scene load_steps=27 format=2]

[ext_resource path="res://fonts/font_display_new.tres" type="DynamicFont" id=1]
[ext_resource path="res://fonts/font_display_new_m.tres" type="DynamicFont" id=2]
[ext_resource path="res://scripts/scenes/options.gd" type="Script" id=3]
[ext_resource path="res://textures/slider.png" type="Texture" id=4]
[ext_resource path="res://textures/slider_h.png" type="Texture" id=5]
[ext_resource path="res://prefabs/cc_button.tscn" type="PackedScene" id=6]
[ext_resource path="res://fonts/font_display_new_s.tres" type="DynamicFont" id=7]
[ext_resource path="res://prefabs/eyes.tscn" type="PackedScene" id=8]
[ext_resource path="res://prefabs/cc_checkbutton.tscn" type="PackedScene" id=10]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxLine" id=2]
grow_end = -4.0
thickness = 10

[sub_resource type="StyleBoxLine" id=4]
color = Color( 0, 0.5, 0.5, 1 )
thickness = 10

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="StyleBoxEmpty" id=7]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=8]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="Animation" id=9]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Polygon2D2:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1.125 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Polygon2D2:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 8, -9 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Polygon2D2:color")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0.137255, 0.533333, 0.470588, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Polygon2D:color")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ) ]
}

[sub_resource type="Animation" id=10]
tracks/0/type = "value"
tracks/0/path = NodePath("Polygon2D2:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1.125 ), Vector2( 1.5, 1.688 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Polygon2D2:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 8, -9 ), Vector2( -68, -33 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Polygon2D2:color")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0.137255, 0.533333, 0.470588, 1 ), Color( 0.137255, 0.533333, 0.470588, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Polygon2D:color")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0.890196, 0.72549, 1 ), Color( 0, 0, 0, 1 ) ]
}

[sub_resource type="Animation" id=11]
tracks/0/type = "value"
tracks/0/path = NodePath("Polygon2D2:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1.125 ), Vector2( 1.5, 1.688 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Polygon2D2:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 8, -9 ), Vector2( -12.8, 28.2 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Polygon2D2:color")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0.137255, 0.533333, 0.470588, 1 ), Color( 0.137255, 0.533333, 0.470588, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Polygon2D:color")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0.890196, 0.72549, 1 ), Color( 0, 0, 0, 1 ) ]
}

[sub_resource type="Animation" id=14]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Polygon2D2:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1.125 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Polygon2D2:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 8, -9 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Polygon2D2:color")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0.137255, 0.533333, 0.470588, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Polygon2D:color")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ) ]
}

[sub_resource type="Animation" id=15]
tracks/0/type = "value"
tracks/0/path = NodePath("Polygon2D2:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1.125 ), Vector2( 1.5, 1.688 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Polygon2D2:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 8, -9 ), Vector2( -68, -33 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Polygon2D2:color")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0.137255, 0.533333, 0.470588, 1 ), Color( 0.137255, 0.533333, 0.470588, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Polygon2D:color")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0.890196, 0.72549, 1 ), Color( 0, 0, 0, 1 ) ]
}

[sub_resource type="Animation" id=16]
tracks/0/type = "value"
tracks/0/path = NodePath("Polygon2D2:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1.125 ), Vector2( 1.5, 1.688 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Polygon2D2:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 8, -9 ), Vector2( -12.8, 28.2 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Polygon2D2:color")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0.137255, 0.533333, 0.470588, 1 ), Color( 0.137255, 0.533333, 0.470588, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Polygon2D:color")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0.890196, 0.72549, 1 ), Color( 0, 0, 0, 1 ) ]
}

[sub_resource type="Animation" id=17]
resource_name = "from_credits"
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( -4, 1 ),
"update": 0,
"values": [ Vector2( -1280, 0 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=13]
resource_name = "to_credits"
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( -4, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -1280, 0 ) ]
}

[sub_resource type="Animation" id=12]
resource_name = "to_title"
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( -4, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -720 ) ]
}

[node name="Options" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelOptions" type="RichTextLabel" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -432.0
margin_top = 32.0
margin_right = -16.0
margin_bottom = 184.0
custom_colors/default_color = Color( 0.917647, 0.839216, 0.572549, 1 )
custom_fonts/normal_font = ExtResource( 1 )
bbcode_enabled = true
bbcode_text = "[center][tornado radius=5 freq=0]Options[/tornado][/center]"
meta_underlined = false
text = "Options"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OptionsList" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -480.0
margin_top = -176.0
margin_right = 480.0
margin_bottom = 256.0
custom_constants/separation = 24
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VolumeSound" type="HBoxContainer" parent="OptionsList"]
margin_right = 960.0
margin_bottom = 92.0

[node name="Label" type="Label" parent="OptionsList/VolumeSound"]
margin_top = 20.0
margin_right = 283.0
margin_bottom = 71.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5
custom_fonts/font = ExtResource( 2 )
text = "Sound Volume"

[node name="VSeparator" type="VSeparator" parent="OptionsList/VolumeSound"]
margin_left = 287.0
margin_right = 299.0
margin_bottom = 92.0
custom_constants/separation = 12
custom_styles/separator = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SliderSound" type="HSlider" parent="OptionsList/VolumeSound"]
margin_left = 303.0
margin_right = 870.0
margin_bottom = 92.0
size_flags_horizontal = 3
size_flags_vertical = 4
custom_icons/grabber_highlight = ExtResource( 5 )
custom_icons/grabber = ExtResource( 4 )
custom_styles/slider = SubResource( 2 )
custom_styles/grabber_area_highlight = SubResource( 4 )
custom_styles/grabber_area = SubResource( 4 )
max_value = 1.0
step = 0.01
value = 1.0

[node name="Value" type="Label" parent="OptionsList/VolumeSound"]
margin_left = 874.0
margin_top = 20.0
margin_right = 960.0
margin_bottom = 71.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.15
custom_fonts/font = ExtResource( 2 )
text = "100"
align = 2

[node name="VolumeMusic" type="HBoxContainer" parent="OptionsList"]
margin_top = 116.0
margin_right = 960.0
margin_bottom = 208.0

[node name="Label" type="Label" parent="OptionsList/VolumeMusic"]
margin_top = 20.0
margin_right = 283.0
margin_bottom = 71.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5
custom_fonts/font = ExtResource( 2 )
text = "Music Volume"

[node name="VSeparator" type="VSeparator" parent="OptionsList/VolumeMusic"]
margin_left = 287.0
margin_right = 299.0
margin_bottom = 92.0
custom_constants/separation = 12
custom_styles/separator = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SliderMusic" type="HSlider" parent="OptionsList/VolumeMusic"]
margin_left = 303.0
margin_right = 870.0
margin_bottom = 92.0
size_flags_horizontal = 3
size_flags_vertical = 4
custom_icons/grabber_highlight = ExtResource( 5 )
custom_icons/grabber = ExtResource( 4 )
custom_styles/slider = SubResource( 2 )
custom_styles/grabber_area_highlight = SubResource( 4 )
custom_styles/grabber_area = SubResource( 4 )
max_value = 1.0
step = 0.01
value = 1.0

[node name="Value" type="Label" parent="OptionsList/VolumeMusic"]
margin_left = 874.0
margin_top = 20.0
margin_right = 960.0
margin_bottom = 71.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.15
custom_fonts/font = ExtResource( 2 )
text = "100"
align = 2

[node name="Checkboxes" type="HBoxContainer" parent="OptionsList"]
margin_top = 232.0
margin_right = 960.0
margin_bottom = 283.0

[node name="Fullscreen" type="HBoxContainer" parent="OptionsList/Checkboxes"]
margin_right = 478.0
margin_bottom = 51.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="OptionsList/Checkboxes/Fullscreen"]
margin_right = 185.0
margin_bottom = 51.0
size_flags_stretch_ratio = 0.5
custom_fonts/font = ExtResource( 2 )
text = "Fullscreen"

[node name="VSeparator" type="VSeparator" parent="OptionsList/Checkboxes/Fullscreen"]
margin_left = 189.0
margin_right = 215.0
margin_bottom = 51.0
custom_constants/separation = 26
custom_styles/separator = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonFullscreen" parent="OptionsList/Checkboxes/Fullscreen" instance=ExtResource( 10 )]
margin_left = 219.0
margin_right = 219.0
margin_bottom = 51.0

[node name="ReduceMotion" type="HBoxContainer" parent="OptionsList/Checkboxes"]
margin_left = 482.0
margin_right = 960.0
margin_bottom = 51.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="OptionsList/Checkboxes/ReduceMotion"]
margin_right = 273.0
margin_bottom = 51.0
size_flags_stretch_ratio = 0.5
custom_fonts/font = ExtResource( 2 )
text = "Reduce Motion"

[node name="VSeparator" type="VSeparator" parent="OptionsList/Checkboxes/ReduceMotion"]
margin_left = 277.0
margin_right = 303.0
margin_bottom = 51.0
custom_constants/separation = 26
custom_styles/separator = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonMotion" parent="OptionsList/Checkboxes/ReduceMotion" instance=ExtResource( 10 )]
margin_left = 307.0
margin_right = 307.0
margin_bottom = 51.0

[node name="ButtonCredits" parent="." instance=ExtResource( 6 )]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -160.0
margin_top = -176.0
margin_right = 160.0
margin_bottom = -104.0
text = "Credits"

[node name="ButtonBack" parent="." instance=ExtResource( 6 )]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 16.0
margin_top = -112.0
margin_right = 120.0
margin_bottom = -32.0
custom_styles/hover = SubResource( 6 )
custom_styles/pressed = SubResource( 7 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 8 )
custom_styles/normal = SubResource( 5 )
is_small = true

[node name="Polygon2D2" parent="ButtonBack" index="1"]
polygon = PoolVector2Array( 16, 15.1111, 72, 8, 104, 43.5556, 80, 79.1111, 16, 79.1111, -8, 50.6667 )

[node name="Polygon2D" parent="ButtonBack" index="2"]
position = Vector2( -120, -9 )
polygon = PoolVector2Array( 144, 15.1111, 200, 8, 232, 43.5556, 208, 79.1111, 144, 79.1111, 120, 50.6667 )

[node name="AnimationPlayer" parent="ButtonBack" index="6"]
anims/RESET = SubResource( 9 )
anims/click = SubResource( 10 )
anims/click_small = SubResource( 11 )

[node name="Arrow" type="Polygon2D" parent="ButtonBack"]
position = Vector2( 13, -5 )
antialiased = true
polygon = PoolVector2Array( 18, 55, 42, 76, 67, 54, 50, 54, 52, 23, 35, 23, 36, 54 )

[node name="ButtonBack2" parent="." instance=ExtResource( 6 )]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 1312.0
margin_top = -112.0
margin_right = 1416.0
margin_bottom = -32.0
custom_styles/hover = SubResource( 6 )
custom_styles/pressed = SubResource( 7 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 8 )
custom_styles/normal = SubResource( 5 )
is_small = true

[node name="Polygon2D2" parent="ButtonBack2" index="1"]
polygon = PoolVector2Array( 16, 15.1111, 72, 8, 104, 43.5556, 80, 79.1111, 16, 79.1111, -8, 50.6667 )

[node name="Polygon2D" parent="ButtonBack2" index="2"]
position = Vector2( -120, -9 )
polygon = PoolVector2Array( 144, 15.1111, 200, 8, 232, 43.5556, 208, 79.1111, 144, 79.1111, 120, 50.6667 )

[node name="AnimationPlayer" parent="ButtonBack2" index="6"]
anims/RESET = SubResource( 14 )
anims/click = SubResource( 15 )
anims/click_small = SubResource( 16 )

[node name="Arrow" type="Polygon2D" parent="ButtonBack2"]
position = Vector2( 10, 2 )
antialiased = true
polygon = PoolVector2Array( 40, 16, 16, 40, 40, 64, 40, 48, 70, 46, 70, 30, 40, 32 )

[node name="Credits" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1280.0
margin_right = 1280.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="RichTextLabel" parent="Credits"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -442.0
margin_top = 88.0
margin_right = 442.0
margin_bottom = 233.0
custom_colors/default_color = Color( 0.917647, 0.839216, 0.572549, 1 )
custom_fonts/normal_font = ExtResource( 1 )
bbcode_enabled = true
bbcode_text = "[tornado radius=5]Consummate Carrion[/tornado]"
meta_underlined = false
text = "Consummate Carrion"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CreditsText" type="RichTextLabel" parent="Credits"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -448.0
margin_top = -104.0
margin_right = 448.0
margin_bottom = 312.0
custom_fonts/normal_font = ExtResource( 7 )
bbcode_enabled = true
bbcode_text = "[center][color=#ead692]Developed by[/color]
Diane Sparks

[color=#ead692]Music by[/color]
[...]
"
text = "Developed by
Diane Sparks

Music by
[...]
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/from_credits = SubResource( 17 )
anims/to_credits = SubResource( 13 )
anims/to_title = SubResource( 12 )

[node name="TimerCredits" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="Demon3" type="Control" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = 776.0
margin_top = 720.0
margin_right = 2056.0
margin_bottom = 1440.0
rect_scale = Vector2( -1, -1 )
mouse_filter = 2
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Body" type="Polygon2D" parent="Demon3"]
position = Vector2( 992, 360 )
color = Color( 0, 0, 0, 1 )
antialiased = true
polygon = PoolVector2Array( -10, -360, -13, -334, 57, -262, 31, -231, 48, -201, 47, -141, 67, -201, 70, -201, 73, -174, 78, -201, 82, -201, 88, -174, 91, -201, 95, -201, 116, -141, 115, -202, 131, -231, 104, -262, 86, -340, 84, -360 )

[node name="Tail" type="Polygon2D" parent="Demon3"]
position = Vector2( 952, 0 )
scale = Vector2( -1, 1 )
color = Color( 0, 0, 0, 1 )
offset = Vector2( -112, 360 )
antialiased = true
polygon = PoolVector2Array( 96, -360, 155, -318, 158, -262, 149, -262, 163, -240, 175, -262, 167, -262, 170, -322, 121, -360 )

[node name="Eyes" parent="Demon3" instance=ExtResource( 8 )]
position = Vector2( 1072, 136 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ClickBlock" type="ColorRect" parent="CanvasLayer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 1704.0
margin_bottom = 920.0
color = Color( 0, 0, 0, 0 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[connection signal="value_changed" from="OptionsList/VolumeSound/SliderSound" to="." method="_on_SliderSound_value_changed"]
[connection signal="value_changed" from="OptionsList/VolumeMusic/SliderMusic" to="." method="_on_SliderMusic_value_changed"]
[connection signal="toggled" from="OptionsList/Checkboxes/Fullscreen/ButtonFullscreen" to="." method="_on_ButtonFullscreen_toggled"]
[connection signal="toggled" from="OptionsList/Checkboxes/ReduceMotion/ButtonMotion" to="." method="_on_ButtonMotion_toggled"]
[connection signal="pressed" from="ButtonCredits" to="." method="_on_ButtonCredits_pressed"]
[connection signal="pressed" from="ButtonBack" to="." method="_on_ButtonBack_pressed"]
[connection signal="pressed" from="ButtonBack2" to="." method="_on_ButtonBack2_pressed"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="timeout" from="TimerCredits" to="." method="_on_TimerCredits_timeout"]

[editable path="ButtonBack"]
[editable path="ButtonBack2"]
